[gd_scene load_steps=5 format=3 uid="uid://d15sjcu0o2lri"]

[ext_resource type="Script" path="res://src/Scripts/Interior/Activities/reactor_rod_shelf.gd" id="1_1uqi7"]
[ext_resource type="Texture2D" uid="uid://b6gr1lenp6wd2" path="res://Assets/Sprites/radiator_rod_shelf.png" id="1_hfy6d"]
[ext_resource type="PackedScene" path="res://src/Scenes/Misc/interaction_sign.tscn" id="2_2iy8c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnvlj"]
size = Vector2(70, 46)

[node name="ReactorRodShelf" type="Area2D"]
position = Vector2(-34, -3)
script = ExtResource("1_1uqi7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hfy6d")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(41, 0)
texture = ExtResource("1_hfy6d")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(82, 0)
texture = ExtResource("1_hfy6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(36, 23)
shape = SubResource("RectangleShape2D_lnvlj")

[node name="InteractionSign" parent="." instance=ExtResource("2_2iy8c")]
position = Vector2(35, -17)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
